secondfile/objects/Deal_Hash__c.object
<CustomObject>
    <fields>
        <fullName>USO_ID_Status__c</fullName>
        <label>USO ID Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Service_ID__c</fullName>
        <label>Unique Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <formula>IF(Opportunity__r.RecordType.Name  == &apos;MACD&apos;,Opportunity__r.ATTUID__c,&apos;&apos; )</formula>
        <label>User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Flag_On_Opportunity__c</fullName>
        <description>This is a technical field used for Custom Logic in the backend. This field is not required on Page Layout.</description>
        <formula>Opportunity__r.X3rd_Party_Flag__c</formula>
        <label>3rd Party Flag On Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBeginQuotePermission__c</fullName>
        <formula>$User.Begin_Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBeginQuotePermission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isContractRenewalFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isContractRenewalFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>saartID__c</fullName>
        <formula>Opportunity__r.Account.SAART_Customer_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>saartID</label>
        <type>Text</type>
    </fields>
    <label>RDS-Deal Hash</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Sub_Account_Number__c</columns>
        <columns>ContractEndDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ServiceType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Account_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Sub_Account_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Opportunity__c</field>
            <operation>contains</operation>
            <value>Q</value>
        </filters>
        <filters>
            <field>ServiceType__c</field>
            <operation>contains</operation>
            <value>AVPN,MIS</value>
        </filters>
        <label>+ All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Master_Order_Number__c</columns>
        <columns>Sub_Account_Number__c</columns>
        <columns>Rate_Plan_ID__c</columns>
        <columns>RDS_object_status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Order_Number__c</field>
            <operation>contains</operation>
            <value>o</value>
        </filters>
        <label>+ All</label>
    </listViews>
    <nameField>
        <displayFormat>DH-{00000}</displayFormat>
        <label>Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Deal Hash</pluralLabel>
    <recordTypes>
        <fullName>RDS_Deal_Hash</fullName>
        <active>true</active>
        <description>RDS-Deal Hash is the Object where all RDS Deal Hash related information will be stored</description>
        <label>RDS-Deal Hash</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lookup_to_Opportunity_cannot_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Opportunity__c )</errorConditionFormula>
        <errorMessage>The reference to Opportunity cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RDS_Edit_Expired</fullName>
        <active>true</active>
        <description>RDS Edit Expired</description>
        <errorConditionFormula>AND(OR(If(Edit_Expired_Date__c&lt;NOW(),True,False),ISPICKVAL( RDS_object_status__c ,&quot;Review completed&quot;)),
!ISCHANGED(Edit_Expired_Date__c),!ISCHANGED( RDS_object_status__c),!ISCHANGED( Customer_Defining_Group_ID__c),!ISCHANGED( Sub_Account_Number__c),!ISCHANGED(ManualFlow__c),
!ISCHANGED( Is_MACDReviewComplete__c ),
!ISCHANGED( RDS_Version_Select__c ), 
NOT(Is_Inflight__c),
$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;,
$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,
$Profile.Name&lt;&gt;&quot;System Admin Read Only(Developers/Testers)&quot;,
NOT(AND(ISCHANGED(RDS_Version__c),$Profile.Name = &quot;ATT Partner Community User&quot;)))</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin for more information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RDS_Version_Select_None_Validation</fullName>
        <active>true</active>
        <description>Validation to pop an error whenever user tries to change RDS version select to None</description>
        <errorConditionFormula>AND(ISPICKVAL(RDS_Version_Select__c,&apos;&apos;),
$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
$Profile.Name &lt;&gt;&quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>RDS Version select cannot be None</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RDS_Version_Select_Validation</fullName>
        <active>true</active>
        <description>EBM user shouldn’t be allowed to change the Version select number while RDS status, MACD Status, Archived status is In progress.</description>
        <errorConditionFormula>ISCHANGED( RDS_Version_Select__c ) &amp;&amp;
(ISPICKVAL(RDS_object_status__c, &apos;Deal Hash Creation API in Progress&apos;) ||  ISPICKVAL(MACD_Update_Status__c, &apos;In Progress&apos;) ||  ISPICKVAL(Archive_Status__c,&apos;In Progress&apos;))</errorConditionFormula>
        <errorMessage>RDS Version select cannot be changed while RDS status, MACD Status, Archived status is In progress.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_DH</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(If(Edit_Expired_Date__c&lt;NOW(),True,False),ISPICKVAL( RDS_object_status__c ,&quot;Review completed&quot;)),
!ISCHANGED(Edit_Expired_Date__c),!ISCHANGED( RDS_object_status__c),!ISCHANGED( Customer_Defining_Group_ID__c),!ISCHANGED( Sub_Account_Number__c),
!ISCHANGED( Is_MACDReviewComplete__c ),
!ISCHANGED( RDS_Version_Select__c ),
NOT(Is_Inflight__c), 
$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;,
$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,
NOT(AND(ISCHANGED(RDS_Version__c),ISCHANGED( RDS_Version_Select__c),$Profile.Name = &quot;ATT Partner Community User&quot;)))</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
</CustomObject>